--- a/candidate_template/include/footer.html
+++ b/candidate_template/include/footer.html
@@ -8,27 +8,19 @@
           <ul class="mt-4 space-y-2">
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Browse Jobs</a>
+              <a href="jobs.html" class="text-gray-300 hover:text-white">Browse Jobs</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Account</a>
+              <a href="candidate_dashboard.html" class="text-gray-300 hover:text-white">Account</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Browse Categories</a>
+              <a href="jobs.html" class="text-gray-300 hover:text-white">Job List</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Resume</a>
-            </li>
-            <li class="flex items-center">
-              <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Job List</a>
-            </li>
-            <li class="flex items-center">
-              <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Sign Up</a>
+              <a href="../../auth_template/sign_up.html" class="text-gray-300 hover:text-white">Sign Up</a>
             </li>
           </ul>
         </div>
@@ -39,23 +31,19 @@
           <ul class="mt-4 space-y-2">
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Home</a>
+              <a href="index.html" class="text-gray-300 hover:text-white">Home</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">About</a>
+              <a href="about.html" class="text-gray-300 hover:text-white">About</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">FAQ</a>
+              <a href="faqs.html" class="text-gray-300 hover:text-white">FAQ</a>
             </li>
             <li class="flex items-center">
               <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Privacy</a>
-            </li>
-            <li class="flex items-center">
-              <i class="fas fa-chevron-right text-indigo-600 mr-2"></i>
-              <a href="#" class="text-gray-300 hover:text-white">Contact</a>
+              <a href="contact.html" class="text-gray-300 hover:text-white">Contact</a>
             </li>
           </ul>
         </div>
